--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
                 <div class="col-md-12 text-center">
                    
                     <p>Copyright © 2026 HA RASEL
-                    	. Designed by <a href="https://themeforest.net/user/epic-themes/portfolio?ref=Epic-Themes" target="_blank">HA RASEL</a></p>
+                    	. Designed by <a href="https://harasel.github.io/dev-harasel/" target="_blank">HA RASEL</a></p>
                                          
                     <!--begin footer_social -->
                     <ul class="footer_social">
@@ -1446,4 +1446,5 @@
 
 
 </body>
+
 </html>
