--- a/index.html
+++ b/index.html
@@ -328,17 +328,17 @@
 					<!--begin owl carousel -->
 					<div id="owl2" class="owl-carousel owl-theme">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-1.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-1.jpg" alt="showcase" class="gallery-show">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-3.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-3.jpg" alt="showcase" class="gallery-show">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-2.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-2.jpg" alt="showcase" class="gallery-show">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-4.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-4.jpg" alt="showcase" class="gallery-show">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-5.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-5.jpg" alt="showcase" class="gallery-show">
 
-						<img src="https://graphicpaw.com/pasific/assets/img/portfolio/thumbs/new-img-550x350-7.jpg" alt="showcase" class="gallery-show">
+						<img src="images/showcase/new-img-550x350-7.jpg" alt="showcase" class="gallery-show">
 					
 					</div>
 					<!--end owl carousel -->
@@ -1448,3 +1448,4 @@
 </body>
 
 </html>
+
