--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                 <!--begin col-md-6-->
                 <div class="col-md-6">
 
-                    <img src="https://graphicpaw.com/pasific/assets/img/other/img-other-28.png" alt="app-image" class="width-100">
+                    <img src="images/other/img-other-28.png" alt="app-image" class="width-100">
 
                 </div>
                 <!--end col-sm-6-->
@@ -988,7 +988,7 @@
 				<!--begin col-md-6 -->
 				<div class="col-md-6">
 
-					<img src="https://graphicpaw.com/pasific/assets/img/other/img-other-27.png" alt="img" class="width-100 wow fadeInUp" data-wow-delay="0.25s">
+					<img src="images/other/img-other-27.png" alt="img" class="width-100 wow fadeInUp" data-wow-delay="0.25s">
 					
 				</div>
 				<!--end col-md-6 -->
@@ -1448,4 +1448,5 @@
 </body>
 
 </html>
+
 
